# playlister

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
res/: playlister.rc
src/: defines.h  init.cc  offsets.h.in  pch.h  playlists.cc  playlists.h  version.h.in
src/offsets/: 2024082600-010.cc  2024082600-012.cc
src/util/: config.h  library.h  memory.h
